--- a/chef/site-cookbooks/mysql/templates/default/my.cnf.erb
+++ b/chef/site-cookbooks/mysql/templates/default/my.cnf.erb
@@ -17,7 +17,7 @@ skip_external_locking
 key_buffer = 32M
 max_allowed_packet = 8M
 table_open_cache = 256
-max_connections = 1024
+max_connections = <%= node[:mysql][:server][:max_connections] %>
 max_connect_errors = 10000
 sort_buffer_size = 1M
 read_buffer_size = 1M
